# reffensive-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADDING_TOOLS.md  Future_Improvement.md  Jenkinsfile  Makefile  README.md  advanced_scan_flow.md  docker-build.sh  docker-compose.production.yml  docker-compose.yml  docker-run.sh  gitleaks.json  gobuster-dir.json  httpx.json  naabu.json  nmap.json  nuclei.json  postman-collection-clean.json  postman-openapi.json  run.sh  sonar-project.properties  sub-test.json  subfinder.json  test.json
fastapi-gateway/: .dockerignore  .env.docker  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  sub-test.json
fastapi-gateway/.scannerwork/: report-task.txt
fastapi-gateway/app/: main.py  quota.py
fastapi-gateway/app/core/: config.py  core_readme.md  security.py
fastapi-gateway/app/dependencies/: __init__.py  auth.py  dependencies_readme.md  rbac.py
fastapi-gateway/app/internal/: advanced_scan_client.py  ai_suggestion_client.py  apikey_client.py  basic_scan_client.py  category_client.py  medium_scan_client.py  minio_storage.py  project_client.py  reporting.py  sonarqube_client.py  target_client.py  tool_client.py
fastapi-gateway/app/queue/: __init__.py  subscriber.py
fastapi-gateway/app/routers/: auth.py  (+14 more)
fastapi-gateway/tests/: test_ai_suggestion.py  test_anonymous_access.py  test_quota.py  test_scan_helpers.py  test_scanner_current_user_scans.py  test_scanner_scan_actions.py  test_secure_tool_execution.py  test_sonarqube_issue_details.py  test_sonarqube_issue_show.py  test_tool_contracts.py
(+264 files in other folders)
